<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http:// schemas.android.com/tools"
    android:layout_width="210dp"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_gravity="center"
    android:layout_margin="70dp"
    android:gravity="center"
    android:orientation="vertical">

    <!--       Image View Logo of Image-->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:paddingTop="20dp"
        app:srcCompat="@drawable/f_reg_app_logo" />

    <Button
        android:id="@+id/btnUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/IAmMilkCollector" />

    <Button
        android:id="@+id/btnCustomer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/IAmFarmer" />

    <!--Spinner widget-->
    <Button
        android:id="@+id/ChangeLanguage"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:text="@string/changeLanguage"
        />
</LinearLayout>