<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http:// schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_centerHorizontal="true"
        tools:context=".AddCustomer">

        <ImageView
            android:layout_width="270dp"
            android:layout_height="190dp"
            android:src="@drawable/logo" />
        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".AddCustomer">

            <!-- TextView for heading -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:text="@string/AddNewCustomer"
                android:textSize="@dimen/fui_heading_padding_bottom" />

            <!-- Edit text for name -->
            <EditText
                android:id="@+id/CUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/EnterCustomerName" />

            <!-- Edit text for contact number -->


            <!-- Button for Create New User -->
            <EditText
                android:id="@+id/CContactNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/EnterCustomerPhonenumber"
                android:inputType="phone"
                android:maxLength="10" />

            <Button
                android:id="@+id/CAddCustomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:text="@string/AddCustomer" />
            <ProgressBar
                android:id="@+id/AAddUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>