<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http:// schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    android:layout_centerHorizontal="true"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="270dp"
        android:layout_height="190dp"
        android:src="@drawable/logo" />
    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <!-- TextView for heading -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:textSize="@dimen/fui_heading_padding_bottom"
        android:text="@string/Login"/>

    <!-- Edit text for email -->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/LoginSignupEmail"
            android:inputType="textEmailAddress" />

    <!-- Edit text for password -->
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/LoginSignupPassword"
        android:layout_margin="10dp"
        android:inputType="textPassword" />

    <!-- Button for Login with text "Login" -->
    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/Login" />

    <!-- ProgressBar for Loading Time -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone" />
</LinearLayout>
</LinearLayout>