<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/SUInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/BillOf10Days"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!-- Edit text for email -->
            <EditText
                android:id="@+id/SUCID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:gravity="center"
                android:hint="@string/UniqueKey"
                android:inputType="number"
                android:maxLength="3"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/SUCustomerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="5"
                android:gravity="center"
                android:hint="@string/CustomerName"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/SUInformationMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">
                <!-- Edit text for email -->
                <TextView
                    android:id="@+id/SUFromDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/From"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/SUFromDateDisplay"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="5"
                    android:gravity="center"
                    android:hint="11/11/2011"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">
                <!-- Edit text for email -->
                <TextView
                    android:id="@+id/SUToDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/To"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/SUToDateDisplay"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="5"
                    android:gravity="center"
                    android:hint="20/11/2011"
                    android:textSize="16dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!-- Edit text for email -->
            <TextView
                android:id="@+id/SUTotalCost"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/TotalCost"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/SUTotalCostDisplay"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="0000.00Rs"
                android:textSize="16dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
    <ListView
        android:id="@+id/SUMilkListFarmer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/SUInformation"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        tools:context=".ShowBillUser">
    </ListView>
    <TextView
        android:id="@+id/NoMoreRecordsMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_below="@id/SUMilkListFarmer"
        android:text="@string/NoMoreRecordFound"
        android:textAlignment="center" />
</RelativeLayout>
