<?xml version="1.0" encoding="utf-8"?>



<!-- Linear Layout with vertical orientation and other properties -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http:// schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    android:layout_centerHorizontal="true"
    tools:context=".RegistrationActivity">

    <ImageView
        android:layout_width="270dp"
        android:layout_height="190dp"
        android:src="@drawable/logo" />
    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <!-- TextView for heading -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:text="@string/LoginSignupEmail"
            android:textSize="@dimen/fui_heading_padding_bottom" />

    <!-- Edit text for email -->
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/LoginSignupEmail"
            android:inputType="textEmailAddress" />

    <!-- Edit text for password -->
    <EditText
        android:id="@+id/passwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/LoginSignupPassword"
        android:inputType="textPassword" />

    <!-- Button for register with text "Register" -->
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/Signup2" />

    <!-- ProgressBar for loading time -->
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone" />
    </LinearLayout>
</LinearLayout>
